--- a/app/src/main/res/layout/i1_profile.xml
+++ b/app/src/main/res/layout/i1_profile.xml
@@ -51,7 +51,7 @@
                     app:layout_constraintVertical_bias="0.0" />
 
                 <ImageButton
-                    android:id="@+id/imageButton4"
+                    android:id="@+id/change_photo"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_marginEnd="2dp"
