--- a/app/src/main/res/layout/g1_closet.xml
+++ b/app/src/main/res/layout/g1_closet.xml
@@ -82,7 +82,8 @@
             app:layout_constraintVertical_bias="0.506">
 
             <ImageView
-
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:background="@drawable/plus"
                 android:backgroundTint="@color/white"
                 android:scaleType="fitCenter"
@@ -192,7 +193,7 @@
         android:id="@+id/bottomBar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/nav"
+        android:background="#EEEEEE"
         android:orientation="horizontal"
         android:padding="4dp"
         android:weightSum="5"
@@ -216,7 +217,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/home_1" />
+                android:src="@drawable/home" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -308,7 +309,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/user_1" />
+                android:src="@drawable/profile" />
 
             <TextView
                 android:layout_width="wrap_content"
