--- a/app/src/main/res/layout/d1_feed.xml
+++ b/app/src/main/res/layout/d1_feed.xml
@@ -88,7 +88,7 @@
         android:id="@+id/feedrecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#FFFFFF"
+        android:background="@color/light_gray"
         android:clipToPadding="false"
         android:overScrollMode="ifContentScrolls"
         android:paddingTop="8dp"
