--- a/app/src/main/res/layout/d2_feed_item_post.xml
+++ b/app/src/main/res/layout/d2_feed_item_post.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="2dp"
     android:layout_marginTop="8dp"
     android:background="@android:color/white"
-    android:orientation="vertical"
 
-    >
+    android:orientation="vertical">
 
     <!-- Header -->
 
@@ -204,7 +204,7 @@
             app:layout_constraintHorizontal_bias="0.50"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.50" >
+            app:layout_constraintVertical_bias="0.50">
 
         </com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator>
 
