--- a/app/src/main/res/layout/i_newpostupload.xml
+++ b/app/src/main/res/layout/i_newpostupload.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:gravity="center|top"
-            android:text="Save"
+            android:text="Post"
             android:textColor="@color/pure_color"
             android:textSize="16sp"
             android:textStyle="bold"
