--- a/app/src/main/res/layout/i_profile_modelfan_user.xml
+++ b/app/src/main/res/layout/i_profile_modelfan_user.xml
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginEnd="16dp"
-            android:backgroundTint="@color/teal_700"
+            android:backgroundTint="@color/pink"
             android:text="Follow Model"
             android:textColor="@android:color/white"
             android:textSize="12sp"
